--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<p>
 				<img class="grg" src="Greg.jpg" alt="Greg" />
 			</p>
-			<p class="p2">Greg Hooper</p>
+			<p class="p2" style="margin: 22px 0 0 42px">Greg Hooper</p>
 		</div>
 	</body>
 </html>
